--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>HTML</title>
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- HTML -->
@@ -18,14 +18,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <div class="top-bar">
+<body onload="loaded()">
+  <div class="top-bar" id="top-bar">
     <span>light</span>
     <center><span class="top-bar-time" id="time"></span></center>
-    <i class="material-icons rfsh">refresh</i>
+    <i id="refresh"><i class="material-icons rfsh w3-spin">refresh</i></i>
   </div>
   <!-- Project -->
   <script src="main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
