navbar design fixed

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   </div>
   <div class="bg-nav">
     <div class="navbar">
-      <b class="material-icons menu">menu</b>
-      <span id="textOfNav">UNtitled.txt</span>
+      <b class="material-icons menu hover">menu</b>
+      <span id="textOfNav">Eoma Pad</span>
       <span class="nav-btns">
-        <b class="material-icons nav-btn">more_vert</b>
-        <b class="material-icons nav-btn">tab</b>
+        <b class="material-icons nav-btn hover">drag_indicator</b>
+        <b class="material-icons nav-btn hover">tab</b>
         <b class="material-icons nav-btn">close</b>
       </span>
     </div>
