--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
   <!-- Custom Styles -->
+  <link rel="stylesheet" href="src/poppop.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,6 +25,7 @@
     <center><span class="top-bar-time" id="time"></span></center>
     <span id="refresh"><i class="material-icons rfsh w3-spin" onclick="refresh(event)">refresh</i></span>
   </div>
+  
   <div class="bg-nav">
     <div class="navbar">
       <b class="material-icons menu hover">menu</b>
@@ -33,6 +35,14 @@
         <b class="material-icons nav-btn hover">tab</b>
         <b class="material-icons nav-btn">close</b>
       </span>
+    </div>
+  </div>
+  
+  <div class="bg-leftbar">
+    <div class="leftbar">
+      <b class="material-icons leftbar-icons" id="left-btn">casino</b>
+      <br>
+      <b class="material-icons leftbar-icons settings">settings</b>
     </div>
   </div>
   <!-- Project -->
