basic design completed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <center><span class="top-bar-time" id="time"></span></center>
     <span id="refresh"><i class="material-icons rfsh w3-spin" onclick="refresh(event)">refresh</i></span>
   </div>
-  
+
   <div class="bg-nav">
     <div class="navbar">
       <b class="material-icons menu hover">menu</b>
@@ -37,10 +37,22 @@
       </span>
     </div>
   </div>
-  
+  <div id="tabs">
+    <div class="bg-tabs">
+      <span><i class="material-icons red" >html</i> <b>index.html</b><i class="material-icons">close</i></span>
+    </div>
+    <div class="bg-tabs">
+      <span><i class="material-icons yellow">code</i> <b>main.js</b><i class="material-icons">close</i></span>
+    </div>
+  </div>
+  <div class="bg-ln">
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+  </div>
   <div class="bg-leftbar">
     <div class="leftbar">
-      <b class="material-icons leftbar-icons" id="left-btn">casino</b>
+      <b class="material-icons leftbar-icons" id="left-btn-csn">casino</b>
       <br>
       <b class="material-icons leftbar-icons settings">settings</b>
     </div>
