--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="src/poppop.css">
+  <link rel="stylesheet" href="src/pop/pop.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body onload="loaded()">
+  <!--html-->
   <div class="top-bar" id="top-bar">
     <span>light</span>
     <center><span class="top-bar-time" id="time"></span></center>
@@ -45,11 +46,45 @@
       <span><i class="material-icons yellow">code</i> <b>main.js</b><i class="material-icons">close</i></span>
     </div>
   </div>
-  <div class="bg-ln">
+  <div class="bg-ln" id="bg-ln">
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <p>4</p>
+    <p>5</p>
+    <p>6</p>
+    <p>7</p>
+    <p>8</p>
+    <p>9</p>
+    <p>10</p>
+    <p>11</p>
+    <p>12</p>
+    <p>13</p>
+    <p>14</p>
+    <p>15</p>
+    <p>16</p>
+    <p>17</p>
+    <p>18</p>
+    <p>19</p>
+    <p>20</p>
+    <p>21</p>
+    <p>22</p>
+    <p>23</p>
+    <p>24</p>
+    <p>25</p>
+    <p>26</p>
+    <p></p>
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
     <p>1</p>
     <p>2</p>
     <p>3</p>
   </div>
+  <textarea name="" id= rows="8" cols="40" style="font-family: 'Courier New', Courier, monospace"></textarea>
   <div class="bg-leftbar">
     <div class="leftbar">
       <b class="material-icons leftbar-icons" id="left-btn-csn">casino</b>
@@ -57,8 +92,20 @@
       <b class="material-icons leftbar-icons settings">settings</b>
     </div>
   </div>
+  
+  
+  <!--loader model-->
+  <div id="preloader" onload="loaded()">
+    <h5>loading...</h5>
+    <hr style="color: black"/>
+    <p>loading [html,css,js(/pop/css)</p>
+    <div class="progress"><span class="loader"></span></div>
+    <button type="submit">close</button>
+  </div>
+  
   <!-- Project -->
   <script src="main.js"></script>
+  <script src="iframes/app.js">iframes/app.js</script>
   <script src="src/settings/settings.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
